Fix the 1st to 3rd content divs

--- a/thought_landingpage/index.html
+++ b/thought_landingpage/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="full-size">
         <div class="header">
             <div class="logo">
                 <img src="mainlogo.png">
@@ -20,5 +20,67 @@
             </div>
             <button>Let's get started!</button>
         </div>
+
+        <div class="content1">
+            <div class="text">
+                <h1>Let's make your product and team<br>a success</h1>
+                <p>thoughtbot is your expert design and development<br><br>partner. We bring digital products from validation to<br><br>
+                    success and teach you how because we care. It's time to<br><br>move beyond simply building features and start designing<br><br>
+                    the right product with the right strategy.
+                </p><br>
+                <button>Let's talk</button>
+            </div>
+            <div class="image">
+                <div class="stimage">
+                    <img style="height: 200px; width: 300px" src="nature.jpeg">
+                </div>
+                <div class="ndimage">
+                    <img style="height: 200px; width: 300px" src="lake.jpeg">
+                </div>
+                <div class="rdimage">
+                    <img style="height: 200px; width: 300px" src="waterfall.jpeg">
+                </div>
+            </div>
+        </div>
+        <p class="pad-up">STARTUPS, SCALE-UPS, AND BEYOND</p>
+        <h2 class="pad-up">Positive outcomes for hundreds of web and mobile projects like yours</h2>
+        <div class="content2">
+            <div class="st-content2">
+                <div>
+                    <img class="imago-1st" src="phonescreens.avif">
+                </div>
+                <p>Harvard Business Review — Future-proofing Harvard Business<br>
+                     Review to inspire the next generation of global business leaders
+                </p>
+                <a href="https://thoughtbot.com/case-studies/HBR">Read the case study</a>
+            </div>
+            <div class="nd-content2">
+                <div>
+                    <img class="imago-2nd" src="holdphone.avif">
+                </div>
+                <p>Beyond Finance — Creating an impactful fintech app and a robust<br>
+                     in-house product team
+                </p>
+                <a href="https://thoughtbot.com/case-studies/Beyond-Finance">Read the case study</a>
+            </div>
+        </div>
+        <div class="content3">
+            <div class="st-content3">
+                <div>
+                    <img class="imago-3rd" src="nicepage.avif">
+                </div>
+                <p>Lawbite — Rebuilding an existing platform suffering from design<br> debt</p>
+                <a href="https://thoughtbot.com/case-studies/lawbite">Read the case study</a>
+            </div>
+            <div class="nd-content3">
+                <div>
+                    <img class="imago-4th" src="screenimage.avif">
+                </div>
+                <p>Airrosti — Delivering an in clinic experience via mobile app</p>
+                <a href="https://thoughtbot.com/case-studies/airrostiremoterecovery">Read the case study</a>
+            </div>
+        </div>
+        <p class="pad-up">OUR SERVICES</p>
+        <h2 class="pad-up">Your expert partners for building mission-driven products</h2>
     </body>
 </html>
