Add the fourth and fifth containers

--- a/thought_landingpage/index.html
+++ b/thought_landingpage/index.html
@@ -82,5 +82,52 @@
         </div>
         <p class="pad-up">OUR SERVICES</p>
         <h2 class="pad-up">Your expert partners for building mission-driven products</h2>
+        <div class="content4">
+            <div class="st-content4">
+                <p>Benefit from over 18 years of experience designing and building successful products.<br><br>
+                 Whether you're a founder with a new idea, a product owner at a large enterprise, or<br><br>
+                 somewhere in between, thoughtbot can help you solve meaningful problems with a<br><br>
+                 design-led approach. Work with a small, dedicated team of project-focused product<br><br>
+                 experts built to fit the needs of your project.
+                </p><br>
+                <a href="https://thoughtbot.com/services">Learn more about our services</a>
+            </div>
+            <div class="nd-content4">
+                <ul>
+                    <li style="list-style-type: none;"><p>SPECIALTY TEAMS FOR EVERY STAGE<br>OF YOUR BUSINESS:</p></li><br>
+                    <li><a href="https://thoughtbot.com/ignite">thoughtbot Ignite</a></li><br>
+                    <li><a href="https://thoughtbot.com/lift-off">thoughtbot Lift Off</a></li><br>
+                    <li><a href="https://thoughtbot.com/boost">thoughtbot Boost</a></li><br>
+                    <li><a href="https://thoughtbot.com/mission-control">thoughtbot Mission Control</a></li><br>
+                </ul>
+            </div>
+        </div>
+        <div class="content5">
+            <div class="st-content5">
+                <div class="fourth">
+                    <img style="height: 200px; width: 300px"  src="canyon.jpeg">
+                </div>
+                <div class="fifth">
+                    <img style="height: 200px; width: 300px"  src="rivalley.jpeg">
+                </div> 
+                <div class="sixth">
+                    <img style="height: 200px; width: 300px"  src="corals.jpeg">
+                </div>  
+            </div>
+            <div class="nd-content5">
+                <p>SERVICE HIGHLIGHT</p>
+                <h2>Pay down your design debt to acquire, retain,<br>and engage users</h2>
+                <p>When time and talent feels constrained, teams sometimes default<br>
+                    to shipping features without applying design thinking. But paying<br>
+                    down design debt is an incredibly powerful source of user value.<br>
+                    Taking care of your design debt enables you to hit your product<br>
+                    metrics. Learn more about design debt and how to start tackling it<br>today.
+                </p><br><br>
+                <a href="https://thoughtbot.com/design-debt">Start tackling design debt today</a>
+            </div>
+        </div>
+        <div class="quotediv">
+            
+        </div>
     </body>
 </html>
