Add a few extrs divs

--- a/thought_landingpage/index.html
+++ b/thought_landingpage/index.html
@@ -105,13 +105,13 @@
         <div class="content5">
             <div class="st-content5">
                 <div class="fourth">
-                    <img style="height: 200px; width: 300px"  src="canyon.jpeg">
+                    <img style="height: 200px; width: 250px"  src="canyon.jpeg">
                 </div>
                 <div class="fifth">
-                    <img style="height: 200px; width: 300px"  src="rivalley.jpeg">
+                    <img style="height: 200px; width: 250px"  src="rivalley.jpeg">
                 </div> 
                 <div class="sixth">
-                    <img style="height: 200px; width: 300px"  src="corals.jpeg">
+                    <img style="height: 200px; width: 250px"  src="corals.jpeg">
                 </div>  
             </div>
             <div class="nd-content5">
@@ -127,7 +127,81 @@
             </div>
         </div>
         <div class="quotediv">
-            
+            <h1>''</h1>
+            <h2>thoughtbot can most definitely handle execution for you, but what's more important is<br>
+                that they know what questions to ask to pull the right projects to execute on from your<br>
+                brain and can implement a great process to execute on them.
+            </h2>
+            <div class="inquote">
+                <div class="avatar">
+                    <div><img style="height: 78px; width: 90px;" src="mikki.jpg"></div>
+                    <div><p><strong>Mikel Arteta</strong><br>First Team Manager, Arsenal </p></div>
+                </div>
+                <div class="link-inquote"><a href="https://thoughtbot.com/case-studies/Beyond-Finance">Read the case study</a></div>
+            </div>
+        </div>
+        <div class="content6">
+            <div class="st-content6">
+                <p>ONLINE WORKSHOPS AND EVENTS</p>
+                <h2>Watch online workshops that unstick<br>your product strategy,
+                    level-up your<br>team, and uncover next steps</h2>
+                <p>Join the thoughtbot team and our special guests as we tackle<br>
+                    today’s biggest product challenges. During our workshops, we<br>
+                    cover the latest from the latest on how COVID-19 is impacting our<br>
+                    product, design and development process to thoughtbot's tried<br>and true process.
+                </p>    
+                <a href="https://thoughtbot.com/events">Check out our events</a>
+            </div>
+            <div class="nd-content6">
+                <div class="seventh">
+                    <img style="height: 200px; width: 250px" src="takehiro.jpeg">
+                </div>
+                <div class="eighth">
+                    <img style="height: 200px; width: 250px" src="pablo.jpeg">
+                </div>
+                <div class="ninth">
+                    <img style="height: 200px; width: 250px" src="saliba.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="content7">
+            <div class="st-content7">
+                <p>OUR COMPANY</p>
+                <h2>Purpose driven teams</h2>
+                <p>Our team is driven by our purpose and values; we continually<br>
+                    improve our process, do our best work in strong partnerships with<br>
+                    you, and transparently share how we work.
+                </p>
+                <a href="https://thoughtbot.com/our-company">Learn more about our company</a>
+            </div>
+            <div class="nd-content7">
+                <div class="tenth">
+                    <img style="height: 200px; width: 200px" src="saka.jpeg">
+                </div>
+                <div class="eleventh">
+                    <img style="height: 150px; width: 250px" src="xhaka.jpeg">
+                </div>
+                <div class="twelfth">
+                    <img style="height: 200px; width: 180px" src="blanco.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="content8">
+            <div class="st-content8">
+                <p>OUR CLIENTS</p>
+                <p>We're proud to partner with<br>clients on meaningful<br>solurions.</p>
+                <a href="https://thoughtbot.com/case-studies/">Learn more</a>
+            </div>
+            <div class="nd-content8">
+                <div>MoMA</div>
+                <div>MERCK</div>
+                <div>DISNEY</div>
+            </div>
+            <div class="rd-content8">
+                <div>Houseparty</div>
+                <div>Mir</div>
+                <div>Planned<br>Parenthood</div>
+            </div>
         </div>
     </body>
 </html>
