Fix all the divs, style later

--- a/thought_landingpage/index.html
+++ b/thought_landingpage/index.html
@@ -193,7 +193,7 @@
                 <a href="https://thoughtbot.com/case-studies/">Learn more</a>
             </div>
             <div class="nd-content8">
-                <div>MoMA</div>
+                <div><img src="moma-1.png"></div>
                 <div>MERCK</div>
                 <div>DISNEY</div>
             </div>
@@ -201,6 +201,97 @@
                 <div>Houseparty</div>
                 <div>Mir</div>
                 <div>Planned<br>Parenthood</div>
+            </div>
+        </div>
+        <p class="pad-up">RESOURCES FOR ENTREPRENEURS, DESIGNERS AND DEVELOPERS</p>
+        <h1 class="pad-up">Reap the rewards of everything we’ve learned while building successful products</h1>
+        <div class="content9">
+            <div class="st-content9">
+                <h4>Purpose-built</h4>
+                <p>Actionable advice for entrepreneurs who<br> want to build products people love.</p>
+                <a href="https://thoughtbot.com/purpose-built">Dive into our resources</a><br><br>
+
+                <h4>Our Playbook</h4>
+                <p>Our documented approach to making<br> successful web and mobile products.</p>
+                <a href="https://thoughtbot.com/playbook">Discover a better way of working</a>
+            </div>
+            <div class="nd-content9">
+                <h4>Design Sprint Guide</h4>
+                <p>Our guide to conducting and facilitating<br>Product Design Sprints.</p>
+                <a href="https://thoughtbot.com/product-design-sprint/guide">Start your sprint</a><br><br>
+
+                <h4>Our Blog</h4>
+                <p>The latest design, development, and<br> product tools, techniques and more.</p>
+                <a href="https://thoughtbot.com/blog">Stay current on best practices</a>
+            </div>
+            <div class="rd-content9">
+                <h4>Upcase</h4>
+                <p>Become an experienced developer and<br>take “junior” out of your title.</p>
+                <a href="https://thoughtbot.com/upcase">Learn from the experts</a><br><br>
+
+                <h4>Giant Robots Smashing Into Other Giant<br>Robots Podcast</h4>
+                <p>A podcast about the design, development,<br>and business of great software.</p>
+                <a href="https://giantrobots.fm">Listen and subscribe</a>
+            </div>
+        </div>
+        <div class="content10">
+            <div class="st-content10">
+                <p>BLOG POST HIGHLIGHT</p>
+                <h2>Tips for using FactoryBot without an<br>ORM</h2>
+                <p>Exploring how to use FactoryBot effectively with models backed<br>by plain Ruby objects.</p>
+                <a href="https://thoughtbot.com/blog/tips-for-using-factory-bot-without-an-orm">Read the blog post</a>
+            </div>
+            <div class="nd-content10">
+                <div class="thirteen">
+                    <img src="esr.jpeg">
+                </div>
+                <div class="fourteen">
+                    <img style="width: 200px; height:150px;" src="martin.jpeg">
+                </div>
+                <div class="fifteen">
+                    <img style="height: 150px;" src="sambi.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="content11">
+            <div><h1>What does success look like for your project?</h1></div>
+            <button>Let's talk</button>
+        </div>
+        <div class="content12">
+            <div class="st-content12">
+                <div class="logo">
+                    <img src="mainlogo.png">
+                    <p class="logotext">thoughtbot</p>
+                </div>
+                <p>&copy 2022 thoughtbot, inc.<br>The design of a robot and thoughtbot are registered trademarks of thoughtbot, inc.</p>
+            </div>
+            <div class="nd-content12">
+                <div class="final-links">
+                    <div class="final-one">
+                        <a href="https://thoughtbot.com/services">Services</a><br>
+                        <a href="https://thoughtbot.com/case-studies">Case Studies</a><br>
+                        <a href="https://thoughtbot.com/resources">Resources</a><br>
+                        <a href="https://thoughtbot.com/hire-us">Let's talk!</a>
+                    </div>
+                    <div class="final-two">
+                        <a href="https://thoughtbot.com/our-company">Our Company</a><br>
+                        <a href="https://thoughtbot.com/jobs">Careers</a><br>
+                        <a href="https://thoughtbot.com/purpose">Purpose</a><br>
+                        <a href="https://thoughtbot.com/blog">Blog</a><br>
+                        <a href="https://github.com/sponsors/thoughtbot">Sponsors</a>
+                    </div>
+                    <div class="final-three">
+                        <a href="https://twitter.com/thoughtbot">Twitter</a><br>
+                        <a href="https://github.com/thoughtbot">GitHub</a><br>
+                        <a href="https://dribble.com/thoughtbot">Dribble</a><br>
+                        <a href="https://www.instagram.com/thoughtbot">Instagram</a>
+                    </div>
+                </div>
+                <a href="tel:+18779762687">US: +1(877) 9-ROBOTS</a>
+                <a href="tel:+442038070560">UK: 44(0)30 3807 0560</a><br>
+                <a href="https://thoughtbot.com/open-source-code-of-conduct">Code of Conduct</a>
+                <a href="https://thoughtbot.com/accessibility-statement">Accessibility Statement</a>
+                <a href="https://www.iubenda.com/privacy-policy/7827608">Privacy Policy</a>
             </div>
         </div>
     </body>
