Style and complete everything

--- a/thought_landingpage/index.html
+++ b/thought_landingpage/index.html
@@ -10,25 +10,25 @@
         <div class="header">
             <div class="logo">
                 <img src="mainlogo.png">
-                <p class="logotext">thoughtbot</p>
+                <p class="logotest">thoughtbot</p>
             </div>
             <div class="mid">
-                <div>Services</div>
-                <div>Case Studies</div>
-                <div>Resources</div>
-                <div>Our Company</div>
+                <div><a href="https://thoughtbot.com/services">Services</a></div>
+                <div><a href="https://thoughtbot.com/case-studies">Case Studies</a></div>
+                <div><a href="https://thoughtbot.com/resources">Resources</a></div>
+                <div><a href="https://thoughtbot.com/our-company">Our Company</a></div>
             </div>
-            <button>Let's get started!</button>
+            <a href="https://thoughtbot.com/hire-us"><button>Let's get started!</button></a>
         </div>
 
         <div class="content1">
             <div class="text">
-                <h1>Let's make your product and team<br>a success</h1>
-                <p>thoughtbot is your expert design and development<br><br>partner. We bring digital products from validation to<br><br>
-                    success and teach you how because we care. It's time to<br><br>move beyond simply building features and start designing<br><br>
+                <h1>Let's make your product and<br>team a success</h1>
+                <p class="grey">thoughtbot is your expert design and development<br>partner. We bring digital products from validation to<br>
+                    success and teach you how because we care. It's time to<br>move beyond simply building features and start designing<br>
                     the right product with the right strategy.
                 </p><br>
-                <button>Let's talk</button>
+                <a href="https://thoughtbot.com/hire-us"><button>Let's talk</button></a>
             </div>
             <div class="image">
                 <div class="stimage">
@@ -42,14 +42,14 @@
                 </div>
             </div>
         </div>
-        <p class="pad-up">STARTUPS, SCALE-UPS, AND BEYOND</p>
-        <h2 class="pad-up">Positive outcomes for hundreds of web and mobile projects like yours</h2>
+        <p class="pad-up grey">STARTUPS, SCALE-UPS, AND BEYOND</p>
+        <h2 style="font-size: 30px;" class="pad-up">Positive outcomes for hundreds of web and mobile projects like yours</h2>
         <div class="content2">
             <div class="st-content2">
                 <div>
                     <img class="imago-1st" src="phonescreens.avif">
                 </div>
-                <p>Harvard Business Review — Future-proofing Harvard Business<br>
+                <p class="grey"><strong>Harvard Business Review</strong> — Future-proofing Harvard Business<br>
                      Review to inspire the next generation of global business leaders
                 </p>
                 <a href="https://thoughtbot.com/case-studies/HBR">Read the case study</a>
@@ -58,7 +58,7 @@
                 <div>
                     <img class="imago-2nd" src="holdphone.avif">
                 </div>
-                <p>Beyond Finance — Creating an impactful fintech app and a robust<br>
+                <p class="grey"><strong>Beyond Finance</strong> — Creating an impactful fintech app and a robust<br>
                      in-house product team
                 </p>
                 <a href="https://thoughtbot.com/case-studies/Beyond-Finance">Read the case study</a>
@@ -69,36 +69,36 @@
                 <div>
                     <img class="imago-3rd" src="nicepage.avif">
                 </div>
-                <p>Lawbite — Rebuilding an existing platform suffering from design<br> debt</p>
+                <p class="grey"><strong>Lawbite</strong> — Rebuilding an existing platform suffering from design<br> debt</p>
                 <a href="https://thoughtbot.com/case-studies/lawbite">Read the case study</a>
             </div>
             <div class="nd-content3">
                 <div>
                     <img class="imago-4th" src="screenimage.avif">
                 </div>
-                <p>Airrosti — Delivering an in clinic experience via mobile app</p>
+                <p class="grey"><strong>Airrosti</strong> — Delivering an in clinic experience via mobile app</p>
                 <a href="https://thoughtbot.com/case-studies/airrostiremoterecovery">Read the case study</a>
             </div>
         </div>
-        <p class="pad-up">OUR SERVICES</p>
+        <p class="pad-up grey">OUR SERVICES</p>
         <h2 class="pad-up">Your expert partners for building mission-driven products</h2>
         <div class="content4">
             <div class="st-content4">
-                <p>Benefit from over 18 years of experience designing and building successful products.<br><br>
-                 Whether you're a founder with a new idea, a product owner at a large enterprise, or<br><br>
-                 somewhere in between, thoughtbot can help you solve meaningful problems with a<br><br>
-                 design-led approach. Work with a small, dedicated team of project-focused product<br><br>
+                <p class="grey">Benefit from over 18 years of experience designing and building successful products.<br>
+                 Whether you're a founder with a new idea, a product owner at a large enterprise, or<br>
+                 somewhere in between, thoughtbot can help you solve meaningful problems with a<br>
+                 design-led approach. Work with a small, dedicated team of project-focused product<br>
                  experts built to fit the needs of your project.
                 </p><br>
                 <a href="https://thoughtbot.com/services">Learn more about our services</a>
             </div>
-            <div class="nd-content4">
+            <div class="nd-content4 grey">
                 <ul>
-                    <li style="list-style-type: none;"><p>SPECIALTY TEAMS FOR EVERY STAGE<br>OF YOUR BUSINESS:</p></li><br>
-                    <li><a href="https://thoughtbot.com/ignite">thoughtbot Ignite</a></li><br>
-                    <li><a href="https://thoughtbot.com/lift-off">thoughtbot Lift Off</a></li><br>
-                    <li><a href="https://thoughtbot.com/boost">thoughtbot Boost</a></li><br>
-                    <li><a href="https://thoughtbot.com/mission-control">thoughtbot Mission Control</a></li><br>
+                    <li style="list-style-type: none;"><p>SPECIALTY TEAMS FOR EVERY STAGE<br>OF YOUR BUSINESS:</p></li>
+                    <li><a href="https://thoughtbot.com/ignite">thoughtbot Ignite</a></li>
+                    <li><a href="https://thoughtbot.com/lift-off">thoughtbot Lift Off</a></li>
+                    <li><a href="https://thoughtbot.com/boost">thoughtbot Boost</a></li>
+                    <li><a href="https://thoughtbot.com/mission-control">thoughtbot Mission Control</a></li>
                 </ul>
             </div>
         </div>
@@ -115,9 +115,9 @@
                 </div>  
             </div>
             <div class="nd-content5">
-                <p>SERVICE HIGHLIGHT</p>
+                <p class="grey">SERVICE HIGHLIGHT</p>
                 <h2>Pay down your design debt to acquire, retain,<br>and engage users</h2>
-                <p>When time and talent feels constrained, teams sometimes default<br>
+                <p class="grey">When time and talent feels constrained, teams sometimes default<br>
                     to shipping features without applying design thinking. But paying<br>
                     down design debt is an incredibly powerful source of user value.<br>
                     Taking care of your design debt enables you to hit your product<br>
@@ -142,10 +142,10 @@
         </div>
         <div class="content6">
             <div class="st-content6">
-                <p>ONLINE WORKSHOPS AND EVENTS</p>
+                <p class="grey">ONLINE WORKSHOPS AND EVENTS</p>
                 <h2>Watch online workshops that unstick<br>your product strategy,
                     level-up your<br>team, and uncover next steps</h2>
-                <p>Join the thoughtbot team and our special guests as we tackle<br>
+                <p class="grey">Join the thoughtbot team and our special guests as we tackle<br>
                     today’s biggest product challenges. During our workshops, we<br>
                     cover the latest from the latest on how COVID-19 is impacting our<br>
                     product, design and development process to thoughtbot's tried<br>and true process.
@@ -166,9 +166,9 @@
         </div>
         <div class="content7">
             <div class="st-content7">
-                <p>OUR COMPANY</p>
+                <p class="grey">OUR COMPANY</p>
                 <h2>Purpose driven teams</h2>
-                <p>Our team is driven by our purpose and values; we continually<br>
+                <p class="grey">Our team is driven by our purpose and values; we continually<br>
                     improve our process, do our best work in strong partnerships with<br>
                     you, and transparently share how we work.
                 </p>
@@ -188,23 +188,23 @@
         </div>
         <div class="content8">
             <div class="st-content8">
-                <p>OUR CLIENTS</p>
-                <p>We're proud to partner with<br>clients on meaningful<br>solurions.</p>
+                <p class="grey">OUR CLIENTS</p>
+                <p class="grey">We're proud to partner with<br>clients on meaningful<br>solutions.</p>
                 <a href="https://thoughtbot.com/case-studies/">Learn more</a>
             </div>
             <div class="nd-content8">
-                <div><img src="moma-1.png"></div>
-                <div>MERCK</div>
-                <div>DISNEY</div>
+                <div><img style="height: auto; width: 180px;" src="moma-confam.png"></div>
+                <div><img style="height: auto; width: 180px;" src="merck-confam.png"></div>
+                <div><img style="height: auto; width: 180px;" src="disney.png"></div>
             </div>
             <div class="rd-content8">
-                <div>Houseparty</div>
+                <div><img style="height: auto; width: 180px;" src="houseparty.png"></div>
                 <div>Mir</div>
-                <div>Planned<br>Parenthood</div>
+                <div><img style="height: auto; width: 180px;" src="plannedp.png"></div>
             </div>
         </div>
-        <p class="pad-up">RESOURCES FOR ENTREPRENEURS, DESIGNERS AND DEVELOPERS</p>
-        <h1 class="pad-up">Reap the rewards of everything we’ve learned while building successful products</h1>
+        <p class="pad-up grey">RESOURCES FOR ENTREPRENEURS, DESIGNERS AND DEVELOPERS</p>
+        <h2 class="pad-up">Reap the rewards of everything we’ve learned while building successful<br>products</h2>
         <div class="content9">
             <div class="st-content9">
                 <h4>Purpose-built</h4>
@@ -236,9 +236,9 @@
         </div>
         <div class="content10">
             <div class="st-content10">
-                <p>BLOG POST HIGHLIGHT</p>
+                <p class="grey">BLOG POST HIGHLIGHT</p>
                 <h2>Tips for using FactoryBot without an<br>ORM</h2>
-                <p>Exploring how to use FactoryBot effectively with models backed<br>by plain Ruby objects.</p>
+                <p class="grey">Exploring how to use FactoryBot effectively with models backed<br>by plain Ruby objects.</p>
                 <a href="https://thoughtbot.com/blog/tips-for-using-factory-bot-without-an-orm">Read the blog post</a>
             </div>
             <div class="nd-content10">
@@ -255,15 +255,17 @@
         </div>
         <div class="content11">
             <div><h1>What does success look like for your project?</h1></div>
-            <button>Let's talk</button>
+            <a href="https://thoughtbot.com/hire-us"><button>Let's talk</button></a>
         </div>
         <div class="content12">
             <div class="st-content12">
-                <div class="logo">
-                    <img src="mainlogo.png">
-                    <p class="logotext">thoughtbot</p>
+                <div class="logotext">
+                    <div class="logo">
+                      <img src="mainlogo.png">
+                    </div>
+                    <div><p class="textlogo">thoughtbot</p></div>
                 </div>
-                <p>&copy 2022 thoughtbot, inc.<br>The design of a robot and thoughtbot are registered trademarks of thoughtbot, inc.</p>
+                <div class="final-numbers"><p>&copy 2022 thoughtbot, inc.<br>The design of a robot and thoughtbot are registered trademarks of thoughtbot,<br>inc.</p></div>
             </div>
             <div class="nd-content12">
                 <div class="final-links">
@@ -271,7 +273,7 @@
                         <a href="https://thoughtbot.com/services">Services</a><br>
                         <a href="https://thoughtbot.com/case-studies">Case Studies</a><br>
                         <a href="https://thoughtbot.com/resources">Resources</a><br>
-                        <a href="https://thoughtbot.com/hire-us">Let's talk!</a>
+                        <a style="color:  rgba(219, 10, 10, 0.993);" href="https://thoughtbot.com/hire-us">Let's talk!</a>
                     </div>
                     <div class="final-two">
                         <a href="https://thoughtbot.com/our-company">Our Company</a><br>
@@ -287,11 +289,13 @@
                         <a href="https://www.instagram.com/thoughtbot">Instagram</a>
                     </div>
                 </div>
-                <a href="tel:+18779762687">US: +1(877) 9-ROBOTS</a>
-                <a href="tel:+442038070560">UK: 44(0)30 3807 0560</a><br>
-                <a href="https://thoughtbot.com/open-source-code-of-conduct">Code of Conduct</a>
-                <a href="https://thoughtbot.com/accessibility-statement">Accessibility Statement</a>
-                <a href="https://www.iubenda.com/privacy-policy/7827608">Privacy Policy</a>
+                <div class="final-numbers">
+                    <a href="tel:+18779762687">US: +1(877) 9-ROBOTS</a>
+                    <a href="tel:+442038070560">UK: 44(0)30 3807 0560</a><br>
+                    <a href="https://thoughtbot.com/open-source-code-of-conduct">Code of Conduct</a>
+                    <a href="https://thoughtbot.com/accessibility-statement">Accessibility Statement</a>
+                    <a href="https://www.iubenda.com/privacy-policy/7827608">Privacy Policy</a>
+                </div>
             </div>
         </div>
     </body>
